# greece-population-census-2021

./: LICENSE  README.md  pyproject.toml
data/adm_regions/: populations.csv
data/municipalities/: populations.csv
data/raw/: elstat_municipality_codes.csv  nuts2_region_codes.csv
data/raw/csv/: adm-page-9-table-1.csv  mun-page-12-table-1.csv  mun-page-12-table-2.csv  mun-page-12-table-3.csv  mun-page-13-table-1.csv  mun-page-13-table-2.csv  mun-page-13-table-3.csv  mun-page-15-table-1.csv  mun-page-15-table-2.csv  mun-page-16-table-1.csv  mun-page-16-table-2.csv  mun-page-16-table-3.csv  mun-page-17-table-1.csv  mun-page-17-table-2.csv  mun-page-17-table-3.csv  mun-page-19-table-1.csv  mun-page-19-table-2.csv  mun-page-20-table-1.csv  mun-page-20-table-2.csv  mun-page-22-table-1.csv  mun-page-22-table-2.csv  mun-page-23-table-1.csv  mun-page-23-table-2.csv  mun-page-25-table-1.csv  mun-page-25-table-2.csv  mun-page-26-table-1.csv  mun-page-26-table-2.csv  mun-page-26-table-3.csv  mun-page-28-table-1.csv  mun-page-28-table-2.csv  mun-page-29-table-1.csv  mun-page-29-table-2.csv  mun-page-29-table-3.csv  mun-page-31-table-1.csv  mun-page-31-table-2.csv  mun-page-32-table-1.csv  mun-page-32-table-2.csv  mun-page-32-table-3.csv  mun-page-34-table-1.csv  mun-page-34-table-2.csv  (+36 more)
extraction/: extract_adm_regions.py  extract_municipalities.py
